# util-linux

./: meson.build
include/: c.h  meson.build
lib/: meson.build
libuuid/: meson.build
libuuid/src/: meson.build
libuuid/uuid/: meson.build  predefined.c  test_uuid.c  uuidP.h
